# Neural-Course

./: CMakeLists.txt
MNIST_approach/: CMakeLists.txt  main.cpp
MNIST_approach/inc/: Connection.h  Global_Prop.hpp  Layer.hpp  Net.hpp  Neuron.hpp  Weight.h
MNIST_approach/src/: Connection.cpp  Layer.cpp  Net.cpp  Neuron.cpp  Weight.cpp
